worked on data security in node using somebuildin packages like express- rate- limit, helmet, express-mongo-sanitize, xss-clean

--- a/natours-node-project/config.env
+++ b/natours-node-project/config.env
@@ -7,6 +7,7 @@ MONGODB_POWERSHELL=mongo "mongodb+srv://cluster0.5mhcsab.mongodb.net/myFirstData
 
 JWT_SECRETE=i-want-to-make-my-secret-ultra-secure
 JWT_EXPIRE_IN=90d
+JWT_COOKIE_EXPIRES_IN=90
 
 EMAIL_USERNAME=alisardar465@gmail.com
 EMAIL_PASSWORD=whhufwcnmyjctwrn
